Changelog
=========

1.9.10 (unreleased)
-------------------

- Nothing changed yet.


1.9.9 (2016-12-21)
------------------

- Improve resource usage of VM config scrubbing: we did not limit the number
  of subprocess of "fc-qemu ensure" that we were spawning.

  We only limited the rate of spawns per second. At some points we saw VM
  servers to get overloaded by a) using multiprocessing.Process that creates
  superfluous forks and b) when the host was busy the actual fc.qemu
  subprocesses where spawned faster than the host could work on them. That lead
  to a very "interesting" behaviour of memory usage where suddenly a lot of
  processes were pushed into swap.

  We now a) do not create superfluous forks and b) limit to at most 5 fc.qemu
  instances at a time.


1.9.8 (2016-12-15)
------------------

- Fix locking error in VM charging (#25145).


1.9.7 (2016-11-17)
------------------

- Bugfix: log stdout/stderr of prepare/finish scripts.


1.9.6 (2016-10-31)
------------------

- Read global backy.conf parameters from `/etc/backy.global.conf`. Fall back to
  built-in defaults if this file does not exist.


1.9.5 (2016-10-21)
------------------

- Drop the invocation of fc-qemu using the config file and use the VM name
  instead. (Requires fc-qemu 0.8.2)

- Always make pending requests unique based on their comment.
  When a request with an identical comment is registered we update the parameters, though.

1.9.4 (2016-06-20)
------------------

- New backup schedule "default-full". #21960


1.9.3 (2016-05-04)
------------------

- Fix bug in VM image charging. Also reduce cluster load while charging. #21393


1.9.2 (2016-04-07)
------------------

- Create symlinks for users boxes which use autofs. Needs at least fc.platform
  commit:11f2052bd606 (#19668).


1.9.1 (2016-03-20)
------------------

- Switch to explicit RBD pool selection instead of RG-based derivation. #20692


1.9.0 (2016-03-03)
------------------
